Fixed scrollbar corner and stats tables being cut off on mobile

--- a/ManagerDash-Stats/statisticsHomePage.css
+++ b/ManagerDash-Stats/statisticsHomePage.css
@@ -114,7 +114,6 @@
     background-color: white;
     text-align: left;
     border-radius: 20px;
-    justify-self: center;
     /* min-width: 100%;  */
     width: 100%;
 }
